--- a/index.html
+++ b/index.html
@@ -14,30 +14,44 @@
 </head>
 <body>
 
-<header id="header-bg">
-    <nav>
-        <div class="brand">
-            <img src="images/logo.svg" alt="" class="brand-image">
-        </div>
-        <ul>
-            <li>home</li>
-            <li>shop</li>
-            <li>about</li>
-            <li>contact</li>
-        </ul>
-    </nav>
-</header>
+<section id="slide">
+    <header id="header-bg">
+        <nav>
+            <div class="brand">
+                <img src="images/logo.svg" alt="" class="brand-image">
+            </div>
+            <ul>
+                <li>home</li>
+                <li>shop</li>
+                <li>about</li>
+                <li>contact</li>
+            </ul>
+        </nav>
+    </header>
+    <div class="arrows">
+        <button>
+            <img src="images/icon-angle-left.svg" alt="">
+        </button>
+        <button>
+            <img src="images/icon-angle-right.svg" alt="">
 
-<section id="slide1">
-    <h1>Discover innovative ways to decorate</h1>
-    <p>We provide unmatched quality, comfort, and style for property owners across the country.
-        Our experts combine form and function in bringing your vision to life. Create a room in your
-        own style with our collection and make your property a reflection of you and what you love.</p>
-    <a href="#" class="btn">Shop now</a>
+        </button>
+    </div>
+    <div class="slide-info">
+        <div class="info-text">
+            <h1>Discover innovative ways to decorate</h1>
+            <p>We provide unmatched quality, comfort, and style for property owners across the country.
+                Our experts combine form and function in bringing your vision to life. Create a room in your
+                own style with our collection and make your property a reflection of you and what you love.</p>
+            <a href="#" class="btn">Shop now <span><img src="images/icon-arrow.svg" alt=""></span></a>
+        </div>
+
+    </div>
+
 </section>
 
 <section class="bottom">
-    <figure>
+    <figure class="dark">
         <img src="images/image-about-dark.jpg" alt="">
     </figure>
     <div class="about">
@@ -48,7 +62,7 @@
             or anything in between. Product specialists are available to help you create your dream space.</p>
     </div>
 
-    <figure>
+    <figure class="light">
         <img src="images/image-about-light.jpg" alt="">
     </figure>
 </section>
